# Tails-rs

./: .gitignore  Cargo.toml  README.md
benches/: runtime.rs  safe_wrappers.rs
docs/: architecture.md  features.md  installation.md  native-modules.md  roadmap.md  testing.md  unsafe-code-guide.md  usage.md
examples/: all_features.ts  test-builtins.ts  test_comp.rs  test_shift.rs
examples/plugins/: loader.ts  main.ts  plugin_manager.ts  run_plugins.ts  sample_plugin.ts  test_await.ts  test_dynamic_import.ts  test_simple.ts  test_simple_mod.ts  test_static.ts  types.ts  validation.ts
modules/abi/: Cargo.toml
modules/abi/src/: lib.rs  loader.rs  traits.rs
modules/fs/: Cargo.toml
modules/fs/src/: lib.rs
modules/my-tails-module/: Cargo.toml
modules/my-tails-module/src/: lib.rs
modules/native-macros/: Cargo.toml
modules/native-macros/src/: class.rs  dts.rs  function.rs  lib.rs  module.rs  types.rs
modules/os/: Cargo.toml
modules/os/src/: lib.rs
modules/path/: Cargo.toml
modules/path/src/: lib.rs
modules/process/: Cargo.toml
modules/process/src/: lib.rs
modules/websocket/: Cargo.toml
modules/websocket/src/: lib.rs
src/: dotenv.rs  lib.rs  main.rs  runtime.rs
src/cli/: build.rs
src/compiler/: bytecode.rs  lexer.rs  mod.rs  parser.rs  type_checker.rs
src/compiler/bytecode/: closures.rs  expressions.rs  mod.rs  stmt_class.rs  stmt_control_flow.rs  stmt_function.rs  stmt_module.rs  stmt_try_catch.rs
src/compiler/parser/: expressions.rs  mod.rs  statements.rs  types.rs
src/compiler/type_checker/: compatibility.rs  expressions.rs  mod.rs  narrowing.rs  operators.rs  statements.rs
src/errors/: mod.rs  runtime_errors.rs  type_errors.rs
src/ffi/: mod.rs  native.rs  safe_string.rs  safe_wrappers.rs
src/objects/: js_array.rs  js_collections.rs  js_date.rs  js_function.rs  js_number.rs  js_object.rs  js_promise.rs  js_proxy.rs  js_string.rs  mod.rs  safe_typed_array.rs
src/runtime_env/: async_runtime.rs  builtins.rs  mod.rs  modules.rs  native_fns.rs  weak_refs.rs
src/runtime_env/native_fns/: array_fns.rs  assert_fns.rs  buffer_fns.rs  child_process_fns.rs  collection_fns.rs  console.rs  constants.rs  crypto_fns.rs  date_fns.rs  encoding_fns.rs  error_fns.rs  events_fns.rs  fetch_fns.rs  fs_fns.rs  function_fns.rs  generator_fns.rs  global_fns.rs  helpers.rs  intl_fns.rs  iterator_fns.rs  json_fns.rs  math_fns.rs  mod.rs  number_fns.rs  object_fns.rs  os_fns.rs  path_fns.rs  process_fns.rs  promise_fns.rs  proxy_fns.rs  reflect_fns.rs  regexp_fns.rs  string_fns.rs  symbol_fns.rs  typed_array_fns.rs  url_fns.rs  websocket_fns.rs
src/vm/: gc.rs  interpreter.rs  mod.rs
src/vm/interpreter/: builtins.rs  call_frame.rs  calls.rs  class_ops.rs  control_flow.rs  exception_handling.rs  function_ops.rs  heap_types.rs  instructions.rs  iterators.rs  mod.rs  modules.rs  native_loader.rs  ops.rs  promise_runtime.rs  property_access.rs  safe_function.rs  safe_library.rs  value_ops.rs
tests/: all_features.rs  async.rs  basic.rs  buffer.rs  bytecode_debug.rs  classes.rs  computed_properties.rs  debug_compile.rs  debug_func.rs  debug_module.rs  destructuring.rs  encoding.rs  error_handling.rs  error_stack.rs  fs_module.rs  functions.rs  gc.rs  intl.rs  minimal.rs  module_debug.rs  modules.rs  object_accessors.rs  optional_chaining.rs  path_module.rs  phase1_features.rs  phase2_features.rs  phase3_features.rs  process_global.rs  proxy.rs  roadmap_features.rs  type_system.rs
tests/fixtures/: assert_test.ts  assert_test2.ts  assert_test3.ts  assert_test4.ts  fetch_test.ts  minified_advanced.ts  minified_basic.ts  minified_oneliner.ts  simple_test.ts  url_simple_test.ts  url_test.ts  url_test_simple.ts  websocket_test.ts
tests/fixtures/modules/: constants.ts  counter.ts  default_class.ts  greeter.ts  has_own_global.ts  lib_a.ts  lib_b.ts  math.ts  uses_math.ts
tests/integration/: modules.rs
tests/unit/: lexer.rs  minified.rs  parser.rs  vm.rs
