[workspace]
members = [".", "modules/abi", "modules/fs", "modules/path", "modules/process", "modules/os"]

[package]
name = "tails-rs"
version = "0.1.0"
edition = "2021"
description = "A TypeScript-first runtime in Rust"
license = "MIT"

[features]
default = ["fs", "path", "process", "os"]
fs = ["dep:tails-fs"]
path = ["dep:tails-path"]
process = ["dep:tails-process"]
os = ["dep:tails-os"]

[lib]
name = "tails"
path = "src/lib.rs"

[[bin]]
name = "tails"
path = "src/main.rs"

[dependencies]
tails-fs = { path = "modules/fs", optional = true }
tails-path = { path = "modules/path", optional = true }
tails-process = { path = "modules/process", optional = true }
tails-os = { path = "modules/os", optional = true }

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Memory & Performance
bumpalo = "3.14"
rustc-hash = "1.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
regex = "1"

# File watching
notify = "8"

# Testing/Tooling
object_store = "0.14.0"

# FFI Support
libc = "0.2"

# Dynamic loading
libloading = "0.8"

# HTTP
reqwest = { version = "0.12", features = ["blocking", "json"] }

# URL parsing
url = "2"
urlencoding = "2"

# Crypto
getrandom = "0.2"
sha2 = "0.10"

# Terminal colors
colored = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "runtime"
harness = false

[[test]]
name = "unit_parser"
path = "tests/unit/parser.rs"

[[test]]
name = "unit_lexer"
path = "tests/unit/lexer.rs"

[[test]]
name = "unit_vm"
path = "tests/unit/vm.rs"
