[package]
name = "tails-abi"
version = "0.1.0"
edition = "2021"
description = "C ABI interface for Tails native modules + SDK runtime"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simd-json = { version = "0.17", features = ["serde_impl"] }
libloading = "0.8"
once_cell = "1"

[build-dependencies]
serde_json = "1"
